--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "firebase": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-button": "^0.7.2"
+    "react-google-button": "^0.7.2",
+    "rehype-sanitize": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
